--- a/client/src/shared/ImportanceDropdown/ImportanceDropdown.css
+++ b/client/src/shared/ImportanceDropdown/ImportanceDropdown.css
@@ -17,3 +17,8 @@
 .dropdown #blue {
   color: blue;
 }
+
+/* Makes bottom of dropdown visible */
+div.menu.transition.visible {
+  margin-bottom: 30px;
+}
